의존성 app라우트 수정 , css 충돌조정

--- a/teamproject-front/src/css/BusinessSignup.css
+++ b/teamproject-front/src/css/BusinessSignup.css
@@ -33,10 +33,10 @@
 }
 
 .business-signup-container .form-group input[type="text"],
-.form-group input[type="email"],
-.form-group input[type="password"],
-.form-group input[type="date"],
-.form-group select {
+.business-signup-container .form-group input[type="email"],
+.business-signup-container .form-group input[type="password"],
+.business-signup-container .form-group input[type="date"],
+.business-signup-container .form-group select {
     width: 100%;
     padding: 8px;
     border: 1px solid #ccc;
@@ -70,7 +70,6 @@
 .business-signup-container .smallBtn {
     background-color: black;
     border: none;
-    width: 100%;
     height: 45px;
     border-radius: 10px;
     margin-left: 350px;
