--- a/teamproject-front/src/components/place/TripReadMDForm.css
+++ b/teamproject-front/src/components/place/TripReadMDForm.css
@@ -1,11 +1,11 @@
-.E_ReviewCreateForm .body {
+.TripReadMDForm .body {
     font-family: 'Arial', sans-serif;
     background-color: #f4f4f9;
     margin: 0;
     padding: 0;
 }
 
-.E_ReviewCreateForm .form-container {
+.TripReadMDForm .form-container {
     max-width: 700px;
     margin: 50px auto;
     padding: 30px;
@@ -14,7 +14,7 @@
     border-radius: 10px;    
 }
 
-.E_ReviewCreateForm .h2 {
+.TripReadMDForm .h2 {
     text-align: center;
     color: #333;
     margin-bottom: 20px;
@@ -22,20 +22,20 @@
     font-weight: 600;
 }
 
-.E_ReviewCreateForm .form-group {
+.TripReadMDForm .form-group {
     margin-bottom: 20px;
 }
 
-.E_ReviewCreateForm .form-group label {
+.TripReadMDForm .form-group label {
     display: block;
     margin-bottom: 8px;
     color: #555;
     font-weight: 500;
 }
 
-.E_ReviewCreateForm .form-group input[type="text"],
-.E_ReviewCreateForm .form-group input[type="file"],
-.E_ReviewCreateForm .form-group textarea {
+.TripReadMDForm .form-group input[type="text"],
+.TripReadMDForm .form-group input[type="file"],
+.TripReadMDForm .form-group textarea {
     width: 100%;
     padding: 12px;
     border: 1px solid #ddd;
@@ -43,44 +43,34 @@
     font-size: 16px;
     background-color: #f9f9f9;
 }
-.E_ReviewCreateForm .form-group input[type="text"]
-{
-    width: 50%;
-}
 
-.E_ReviewCreateForm .form-group textarea {
+.TripReadMDForm .form-group textarea {
     height: 120px;
     resize: vertical;
 }
 
-.E_ReviewCreateForm .subImageGroup {
+.TripReadMDForm .subImageGroup {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
     margin-bottom: 20px;
 }
 
-.E_ReviewCreateForm .subImageGroup .subshowlist,
-.E_ReviewCreateForm .subImageGroup .subshowlist2 {
+.TripReadMDForm .subImageGroup .subshowlist,
+.TripReadMDForm .subImageGroup .subshowlist2 {
     flex: 1;
     min-width: 300px;
 }
 
 
-.E_ReviewCreateForm .h3 {
+.TripReadMDForm .h3 {
     color: #444;
     margin-bottom: 20px;
     font-size: 20px;
     font-weight: 500;
 }
 
-
-.E_ReviewCreateForm .submit-button:hover {
-    background-color: #0056b3;
-    transform: scale(1.05);
-}
-.E_ReviewCreateForm .button{
-
+.TripReadMDForm button {
     display: block;
     width: 100%;
     padding: 12px;
@@ -92,4 +82,9 @@
     font-weight: 500;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.TripReadMDForm .submit-button:hover {
+    background-color: #0056b3;
+    transform: scale(1.05);
 }
